doc(1_BasciOperation): Finish

--- a/Notebooks/1_Math/1_BasciOperation/1362_ClosestDivisors.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/1362_ClosestDivisors.ipynb
@@ -11,11 +11,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1020d676-61e2-40c0-92e5-d51156424345",
+   "id": "81d52711-4209-4609-84c5-e67141537ff1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include<iostream>\n",
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <cmath>\n",
     "using namespace std;"
    ]
   },
@@ -27,24 +29,33 @@
     "Solution:\n",
     "\n",
     "---\n",
-    "- Name Solution: Using Modulo Operator\n",
-    "- Idead: Using modulo operator - \"%\"\"\n",
-    "- Time: O(1)\n",
-    "- Space: O(1)\n",
+    "- Name Solution: Closest Divisors\n",
+    "- Idea:\n",
+    "    - To find two divisors of either (x + 1) or (x + 2) whose difference is minimized,\n",
+    "    - start checking from sqrt(x + 2) downward. Factors closer to the square root will\n",
+    "    - naturally have a smaller difference. Return the first valid pair found.\n",
+    "- Time: O(sqrt(N)), since we iterate down from sqrt(x + 2)\n",
+    "- Space: O(1), only constant extra space used\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb33c326-8b11-4b46-93f5-cb77da3010c5",
+   "id": "a9feacf2-0132-4fd5-959b-1764dc726f1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution {\n",
-    "public: \n",
-    "    bool isEven(int n) {\n",
-    "        return n % 2 == 0;\n",
+    "public:\n",
+    "    vector<int> closestDivisors(int x) {\n",
+    "        for (int a = sqrt(x + 2); a > 0; --a) {\n",
+    "            if ((x + 1) % a == 0)\n",
+    "                return {a, (x + 1) / a};\n",
+    "            if ((x + 2) % a == 0)\n",
+    "                return {a, (x + 2) / a};\n",
+    "        }\n",
+    "        return {};\n",
     "    }\n",
     "};"
    ]
@@ -54,30 +65,24 @@
    "id": "cd5602a5-2575-4d2b-9713-8362076faea0",
    "metadata": {},
    "source": [
-    "Test Caste:"
+    "Test Case:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d8dbce7-815c-497b-9477-ad9eff65e512",
+   "id": "98c49c0a-3800-4d29-81f2-4922fc024e6a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test case n = 1\n",
-      "1 is Odd\n",
+      "x = 8 -> Closest divisors: 3, 3\n",
       "-------------------------\n",
-      "Test case n = 5\n",
-      "5 is Odd\n",
+      "x = 123 -> Closest divisors: 5, 25\n",
       "-------------------------\n",
-      "Test case n = 10\n",
-      "10 is Even\n",
-      "-------------------------\n",
-      "Test case n = 100\n",
-      "100 is Even\n",
+      "x = 999 -> Closest divisors: 25, 40\n",
       "-------------------------\n"
      ]
     }
@@ -86,17 +91,12 @@
     "Solution sol;\n",
     "\n",
     "    // Test cases\n",
-    "    int testCases[] = {1, 5, 10, 100};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "    vector<int> testCases = {8, 123, 999};\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
-    "        cout << \"Test case n = \" << n << endl;\n",
-    "        if (sol.isEven(n)) {\n",
-    "            cout << n << \" is Even\" << endl;\n",
-    "        } else {\n",
-    "            cout << n << \" is Odd\" << endl;\n",
-    "        }\n",
+    "    for (int x : testCases) {\n",
+    "        vector<int> res = sol.closestDivisors(x);\n",
+    "        cout << \"x = \" << x << \" -> Closest divisors: \";\n",
+    "        cout << res[0] << \", \" << res[1] << endl;\n",
     "        cout << \"-------------------------\" << endl;\n",
     "    }\n",
     "\n",
