--- a/Notebooks/1_Math/1_BasciOperation/2235_AddTwoInterger.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/2235_AddTwoInterger.ipynb
@@ -5,12 +5,12 @@
    "id": "2e51741c-898b-4e1c-a191-e31614eb33e7",
    "metadata": {},
    "source": [
-    "Library"
+    "Library:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3c0af361-2b1f-4d5b-83d9-698e55193fab",
    "metadata": {},
    "outputs": [],
@@ -25,15 +25,18 @@
    "metadata": {},
    "source": [
     "Solution:\n",
-    "- Name Method: Direct Operation\n",
+    "\n",
+    "---\n",
+    "- Solution Name: Direct Operation\n",
     "- Idea: Sum = num1 + num_2\n",
     "- Time: O(1)\n",
-    "- Space: O(1)"
+    "- Space: O(1)\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "86b7877f-0d9c-425d-9cae-6a6bf9ea23e8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a87247b0-7ae0-4b2b-a6b5-8e4087b68c39",
    "metadata": {},
    "outputs": [
