--- a/Notebooks/1_Math/1_BasciOperation/2769_FindtheMaximumAchievableNumber.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/2769_FindtheMaximumAchievableNumber.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1020d676-61e2-40c0-92e5-d51156424345",
+   "id": "8b6ec2fd-605d-4558-8d86-b3dd2700bb45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,25 @@
    "metadata": {},
    "source": [
     "Solution:\n",
-    "\n",
-    "---\n",
-    "- Name Solution: Using Modulo Operator\n",
-    "- Idead: Using modulo operator - \"%\"\"\n",
-    "- Time: O(1)\n",
-    "- Space: O(1)\n",
-    "---"
+    "- Name Solution: Maximum Achievable X\n",
+    "- Idea:\n",
+    "  - Each operation allows increasing `num` by 1 and decreasing `t` by 1.\n",
+    "  - Since you can do `t` operations, the maximum achievable value of X is `num + 2 * t`.\n",
+    "- Time: O(1), calculation done in a single step\n",
+    "- Space: O(1), no extra memory used"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb33c326-8b11-4b46-93f5-cb77da3010c5",
+   "id": "cda7915d-cdfa-4920-8b9a-fbd5078f8b2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution {\n",
-    "public: \n",
-    "    bool isEven(int n) {\n",
-    "        return n % 2 == 0;\n",
+    "public:\n",
+    "    int theMaximumAchievableX(int num, int t) {\n",
+    "        return num + 2 * t;\n",
     "    }\n",
     "};"
    ]
@@ -54,30 +53,30 @@
    "id": "cd5602a5-2575-4d2b-9713-8362076faea0",
    "metadata": {},
    "source": [
-    "Test Caste:"
+    "Test Case:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d8dbce7-815c-497b-9477-ad9eff65e512",
+   "id": "75a557ad-edfd-4cff-bdae-c7fd8bf6dcfb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test case n = 1\n",
-      "1 is Odd\n",
+      "Test case: num = 3, t = 2\n",
+      "Maximum achievable X: 7\n",
       "-------------------------\n",
-      "Test case n = 5\n",
-      "5 is Odd\n",
+      "Test case: num = 5, t = 0\n",
+      "Maximum achievable X: 5\n",
       "-------------------------\n",
-      "Test case n = 10\n",
-      "10 is Even\n",
+      "Test case: num = 1, t = 4\n",
+      "Maximum achievable X: 9\n",
       "-------------------------\n",
-      "Test case n = 100\n",
-      "100 is Even\n",
+      "Test case: num = 10, t = 5\n",
+      "Maximum achievable X: 20\n",
       "-------------------------\n"
      ]
     }
@@ -85,18 +84,15 @@
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {1, 5, 10, 100};\n",
+    "    // Test cases: (num, t)\n",
+    "    pair<int, int> testCases[] = {{3, 2}, {5, 0}, {1, 4}, {10, 5}};\n",
     "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
     "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
-    "        cout << \"Test case n = \" << n << endl;\n",
-    "        if (sol.isEven(n)) {\n",
-    "            cout << n << \" is Even\" << endl;\n",
-    "        } else {\n",
-    "            cout << n << \" is Odd\" << endl;\n",
-    "        }\n",
+    "        int num = testCases[i].first;\n",
+    "        int t   = testCases[i].second;\n",
+    "        cout << \"Test case: num = \" << num << \", t = \" << t << endl;\n",
+    "        cout << \"Maximum achievable X: \" << sol.theMaximumAchievableX(num, t) << endl;\n",
     "        cout << \"-------------------------\" << endl;\n",
     "    }\n",
     "\n",
