--- a/Notebooks/1_Math/1_BasciOperation/704112_MultiplicationTable.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704112_MultiplicationTable.ipynb
@@ -26,10 +26,13 @@
    "metadata": {},
    "source": [
     "Solution:\n",
+    "\n",
+    "---\n",
     "- Name Solution: Using Loop\n",
     "- Idead: Generate multiplication table of n from 1 to 10\n",
     "- Time: O(10) ≈ O(1)\n",
-    "- Space: O(10) ≈ O(1)"
+    "- Space: O(10) ≈ O(1)\n",
+    "---"
    ]
   },
   {
