--- a/Notebooks/1_Math/1_BasciOperation/704620_Swaptwonumbers.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704620_Swaptwonumbers.ipynb
@@ -27,25 +27,30 @@
    "metadata": {},
    "source": [
     "Solution:\n",
+    "\n",
+    "---\n",
     "- Method 1:\n",
-    "  - Name Solution: Swap using temporary variable\n",
+    "  - Solution Name: Swap using temporary variable\n",
     "  - Idea:\n",
     "    - Use a temporary variable to hold one value while swapping the two numbers.\n",
     "    - This is the classic and safe method for swapping.\n",
     "  - Time: O(1)\n",
     "  - Space: O(1)\n",
+    "---\n",
     "- Method 2:\n",
-    "     - Name Solution: Swap using addition & subtraction\n",
+    "     - Solution Name: Swap using addition & subtraction\n",
     "    - Idea:\n",
     "        - Swap two numbers without a temporary variable by using arithmetic operations.\n",
     "        - Be careful of integer overflow in some languages.\n",
     "    - Time: O(1)\n",
     "    - Space: O(1)\n",
+    "---\n",
     "- Method 3:\n",
     "    - Name Solution: Built-in Swap\n",
     "    - Idea: Use the language's built-in swap function (e.g., std::swap in C++) for readability and safety.\n",
     "    - Time: O(1)\n",
-    "    - Space: O(1)\n"
+    "    - Space: O(1)\n",
+    "---"
    ]
   },
   {
@@ -57,6 +62,7 @@
    "source": [
     "class Solution {\n",
     "public: \n",
+    "    // Method 1\n",
     "    pair<int, int> swapUsingTemp(int a, int b) {\n",
     "        int temp = a;\n",
     "        a = b;\n",
@@ -64,13 +70,15 @@
     "        return {a, b};\n",
     "    }\n",
     "\n",
+    "    // Method 2\n",
     "    pair<int, int> swapUsingMath(int a, int b) {\n",
     "        a = a + b;\n",
     "        b = a - b;\n",
     "        a = a - b;\n",
     "        return {a, b};\n",
     "    }\n",
-    "    \n",
+    "\n",
+    "    // Method 3\n",
     "    pair<int, int> swapUsingBuiltin(int a, int b) {\n",
     "        std::swap(a, b);\n",
     "        return {a, b};\n",
