--- a/Notebooks/1_Math/1_BasciOperation/704133_Thediceproblem.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704133_Thediceproblem.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1020d676-61e2-40c0-92e5-d51156424345",
+   "id": "15e9b7f5-85e9-463f-95e5-36b34bb14bca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,26 @@
     "Solution:\n",
     "\n",
     "---\n",
-    "- Name Solution: Using Modulo Operator\n",
-    "- Idead: Using modulo operator - \"%\"\"\n",
-    "- Time: O(1)\n",
-    "- Space: O(1)\n",
+    "- Solution Name: Opposite Face of Dice\n",
+    "- Idea:\n",
+    "   - In a standard 6-faced dice, the sum of opposite faces is always 7.\n",
+    "   - Therefore, the opposite face of a given number n can be found using 7 - n.\n",
+    "- Time: O(1), single subtraction operation\n",
+    "- Space: O(1), no extra memory used\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb33c326-8b11-4b46-93f5-cb77da3010c5",
+   "id": "2313c29d-d78d-47aa-89b8-793a8fd4f225",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution {\n",
-    "public: \n",
-    "    bool isEven(int n) {\n",
-    "        return n % 2 == 0;\n",
+    "public:\n",
+    "    int oppositeFaceOfDice(int n) {\n",
+    "        return 7 - n;\n",
     "    }\n",
     "};"
    ]
@@ -54,13 +56,13 @@
    "id": "cd5602a5-2575-4d2b-9713-8362076faea0",
    "metadata": {},
    "source": [
-    "Test Caste:"
+    "Test Case:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d8dbce7-815c-497b-9477-ad9eff65e512",
+   "id": "67a30451-86c0-4e50-9aad-9c04245b5420",
    "metadata": {},
    "outputs": [
     {
@@ -68,35 +70,37 @@
      "output_type": "stream",
      "text": [
       "Test case n = 1\n",
-      "1 is Odd\n",
+      "Opposite face: 6\n",
+      "-------------------------\n",
+      "Test case n = 2\n",
+      "Opposite face: 5\n",
+      "-------------------------\n",
+      "Test case n = 3\n",
+      "Opposite face: 4\n",
+      "-------------------------\n",
+      "Test case n = 4\n",
+      "Opposite face: 3\n",
       "-------------------------\n",
       "Test case n = 5\n",
-      "5 is Odd\n",
+      "Opposite face: 2\n",
       "-------------------------\n",
-      "Test case n = 10\n",
-      "10 is Even\n",
-      "-------------------------\n",
-      "Test case n = 100\n",
-      "100 is Even\n",
+      "Test case n = 6\n",
+      "Opposite face: 1\n",
       "-------------------------\n"
      ]
     }
    ],
    "source": [
-    "Solution sol;\n",
+    "    Solution sol;\n",
     "\n",
     "    // Test cases\n",
-    "    int testCases[] = {1, 5, 10, 100};\n",
+    "    int testCases[] = {1, 2, 3, 4, 5, 6};\n",
     "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
     "    for (int i = 0; i < size; i++) {\n",
     "        int n = testCases[i];\n",
     "        cout << \"Test case n = \" << n << endl;\n",
-    "        if (sol.isEven(n)) {\n",
-    "            cout << n << \" is Even\" << endl;\n",
-    "        } else {\n",
-    "            cout << n << \" is Odd\" << endl;\n",
-    "        }\n",
+    "        cout << \"Opposite face: \" << sol.oppositeFaceOfDice(n) << endl;\n",
     "        cout << \"-------------------------\" << endl;\n",
     "    }\n",
     "\n",
